[gd_scene load_steps=35 format=3 uid="uid://cg5bs2fy0sh0"]

[ext_resource type="Script" uid="uid://ctmqqv07qjp84" path="res://Scripts/intro_cutscene.gd" id="1_udjhp"]
[ext_resource type="Shader" uid="uid://bw7fjsock0lut" path="res://Shaders/camcorder.gdshader" id="2_5ptd1"]
[ext_resource type="FontFile" uid="uid://cidci8ycbtf2j" path="res://Assets/Fonts/GhoulFriAOE.ttf" id="2_7xvtf"]
[ext_resource type="Shader" uid="uid://byhpe7k6ik4n0" path="res://Shaders/wiggle_text.gdshader" id="3_qqj5d"]
[ext_resource type="Texture2D" uid="uid://bpxrliw0vg30q" path="res://Assets/Textures/Metals/metall001-new.png" id="4_726jo"]
[ext_resource type="Shader" uid="uid://r27skblhwo44" path="res://Shaders/dark_vignette.gdshader" id="5_1mw3s"]
[ext_resource type="Texture2D" uid="uid://45uww4cmse5c" path="res://Assets/Textures/Metals/metall001-new-nm.png" id="5_pqicb"]
[ext_resource type="Script" uid="uid://dc2l8bv5lwwxe" path="res://Scripts/dark_vignette.gd" id="6_acu4y"]
[ext_resource type="Texture2D" uid="uid://dgm02mgrj88xd" path="res://Assets/Textures/Metals/metall003-new.png" id="6_ygb1w"]
[ext_resource type="Texture2D" uid="uid://y017gpg7nqwd" path="res://Assets/Textures/Metals/metall003-new-nm.png" id="7_hd1p2"]
[ext_resource type="Shader" uid="uid://d4gge76unbuh4" path="res://Shaders/vingette.gdshader" id="7_t1x57"]
[ext_resource type="Shader" uid="uid://b7w8vso1bv4mm" path="res://Shaders/oven_heat_schlieren.gdshader" id="8_dmj0s"]
[ext_resource type="Texture2D" uid="uid://jvprl2nbfryr" path="res://Assets/Textures/planks.png" id="9_askjd"]
[ext_resource type="AudioStream" uid="uid://de5bua46361f8" path="res://Assets/Audio/SFX/360601__cabled_mess__typewriter-snippet-03.wav" id="9_qqj5d"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_726jo"]
noise_type = 3
frequency = 0.1436

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2fmhe"]
width = 1024
height = 1204
noise = SubResource("FastNoiseLite_726jo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pqicb"]
shader = ExtResource("2_5ptd1")
shader_parameter/color_bleed_enabled = true
shader_parameter/chromatic_abberation_enabled = true
shader_parameter/film_grain_enabled = true
shader_parameter/sharpness_enabled = true
shader_parameter/chromatic_abberation_seperation = 0.016
shader_parameter/chromatic_abberation_intensity = 2.0
shader_parameter/chromatic_abberation_blur_strength = 1.0
shader_parameter/film_grain_noise = SubResource("NoiseTexture2D_2fmhe")
shader_parameter/film_grain_intensity = 1.0
shader_parameter/grain_size = 2.0
shader_parameter/darkness_clamp = 0.28
shader_parameter/sharpness_size = 2.0
shader_parameter/sharpness_intensity = 0.7
shader_parameter/color_bleed_seperation = 0.02
shader_parameter/color_bleed_intensity = 0.2
shader_parameter/anti_bleed_intensity = 1.8
shader_parameter/color_bleed_blur_strength = 1.0
shader_parameter/color_bleed_quality = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ygb1w"]
shader = ExtResource("3_qqj5d")
shader_parameter/wiggleMult = 0.005

[sub_resource type="Environment" id="Environment_hybjd"]
background_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kk8vj"]
albedo_color = Color(0.601223, 0.601223, 0.601223, 1)
albedo_texture = ExtResource("4_726jo")
normal_enabled = true
normal_texture = ExtResource("5_pqicb")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0elqv"]
albedo_texture = ExtResource("6_ygb1w")
normal_enabled = true
normal_texture = ExtResource("7_hd1p2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fo3s5"]
albedo_color = Color(0.0264117, 0.00799411, 0.0588167, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_q8v73"]
data = PackedVector3Array(-0.9107, -0.0646, 1.248, 0.9107, -0.0646, 1.248, 0.9107, -0.0646, -1.248, 0.9107, 0.0646, 1.248, 0.8198, 0.0646, 1.1621, 0.9107, 0.0646, -1.248, 0.9107, 0.0646, 1.248, -0.8074, 0.0646, 1.1621, 0.8198, 0.0646, 1.1621, 0.9107, 0.0646, -1.248, 0.8198, 0.0646, 1.1621, 0.8198, 0.0646, -1.1621, 0.9107, 0.0646, 1.248, 0.9107, 0.0646, -1.248, 0.9107, -0.0646, -1.248, 0.9107, 0.0646, -1.248, 0.8198, 0.0646, -1.1621, -0.9107, 0.0646, -1.248, 0.9107, -0.0646, -1.248, 0.9107, 0.0646, -1.248, -0.9107, 0.0646, -1.248, 0.9107, -0.0646, 1.248, 0.9107, 0.0646, 1.248, 0.9107, -0.0646, -1.248, 0.9107, 0.0646, 1.248, 0.9107, -0.0646, 1.248, -0.9107, -0.0646, 1.248, -0.9107, -0.0646, 1.248, -0.9107, -0.0646, -1.248, -0.9107, 0.0646, -1.248, -0.9107, 0.0646, 1.248, -0.8074, 0.0646, 1.1621, 0.9107, 0.0646, 1.248, -0.9107, -0.0646, 1.248, 0.9107, -0.0646, -1.248, -0.9107, -0.0646, -1.248, -0.9107, 0.0646, 1.248, -0.8074, 0.0646, -1.1621, -0.8074, 0.0646, 1.1621, -0.9107, 0.0646, -1.248, -0.9107, 0.0646, 1.248, -0.9107, -0.0646, 1.248, -0.9107, 0.0646, -1.248, 0.8198, 0.0646, -1.1621, -0.8074, 0.0646, -1.1621, 0.9107, -0.0646, -1.248, -0.9107, 0.0646, -1.248, -0.9107, -0.0646, -1.248, -0.9107, 0.0646, 1.248, 0.9107, 0.0646, 1.248, -0.9107, -0.0646, 1.248, -0.9107, 0.0646, -1.248, -0.8074, 0.0646, -1.1621, -0.9107, 0.0646, 1.248, -0.8074, 0.0072, -1.1621, 0.8198, 0.0072, -1.1621, -0.8074, 0.0072, 1.1621, 0.8198, 0.0646, 1.1621, 0.8198, 0.0072, 1.1621, 0.8198, 0.0072, -1.1621, 0.8198, 0.0646, 1.1621, -0.8074, 0.0646, 1.1621, 0.8198, 0.0072, 1.1621, 0.8198, 0.0072, -1.1621, 0.8198, 0.0072, 1.1621, -0.8074, 0.0072, 1.1621, -0.8074, 0.0646, -1.1621, -0.8074, 0.0072, -1.1621, -0.8074, 0.0072, 1.1621, 0.8198, 0.0072, -1.1621, 0.8198, 0.0646, -1.1621, 0.8198, 0.0646, 1.1621, 0.8198, 0.0072, -1.1621, -0.8074, 0.0072, -1.1621, 0.8198, 0.0646, -1.1621, -0.8074, 0.0646, -1.1621, 0.8198, 0.0646, -1.1621, -0.8074, 0.0072, -1.1621, -0.8074, 0.0072, 1.1621, -0.8074, 0.0646, 1.1621, -0.8074, 0.0646, -1.1621, -0.8074, 0.0072, 1.1621, 0.8198, 0.0072, 1.1621, -0.8074, 0.0646, 1.1621)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uw635"]
transparency = 1
albedo_color = Color(0.0627451, 0.192157, 0.360784, 0.360784)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pod84"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_726jo"]
noise = SubResource("FastNoiseLite_pod84")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awar5"]
render_priority = 0
shader = ExtResource("8_dmj0s")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_726jo")
shader_parameter/distortion_strength = 0.02
shader_parameter/turbulence_scale = 3.0
shader_parameter/flow_speed = 0.0
shader_parameter/vertical_rise_speed = 0.8
shader_parameter/shimmer_frequency = 8.0
shader_parameter/depth_fade_distance = 2.0
shader_parameter/edge_softness = 0.3
shader_parameter/distortion_direction = Vector2(0.3, 1)
shader_parameter/chromatic_aberration = 0.003

[sub_resource type="QuadMesh" id="QuadMesh_p1st1"]
flip_faces = true
size = Vector2(2, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e1l8n"]
albedo_texture = ExtResource("9_askjd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hd1p2"]
shader = ExtResource("5_1mw3s")
shader_parameter/radius = 0.5
shader_parameter/speed = 1.0
shader_parameter/effect_color = Color(0.164736, 0.101794, 0.0158784, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dmj0s"]
shader = ExtResource("7_t1x57")
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.42
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qn3m"]
bg_color = Color(0, 0, 0, 0.784314)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.580392, 0.0784314, 0.0784314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.490196)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="Theme" id="Theme_5r7xd"]
default_font = ExtResource("2_7xvtf")
default_font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_2quxm"]
font = ExtResource("2_7xvtf")
font_size = 18
font_color = Color(0.823529, 0.823529, 0.823529, 1)

[node name="IntroCutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_udjhp")

[node name="CamcorderShader" type="CanvasLayer" parent="."]
layer = 3

[node name="Camcorder" type="ColorRect" parent="CamcorderShader"]
material = SubResource("ShaderMaterial_pqicb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WiggleText" type="CanvasLayer" parent="."]
layer = 3

[node name="WiggleText" type="ColorRect" parent="WiggleText"]
material = SubResource("ShaderMaterial_ygb1w")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundImage" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="BackgroundImage"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="OvenScene" type="Node3D" parent="BackgroundImage/SubViewport"]

[node name="Environment" type="Node" parent="BackgroundImage/SubViewport/OvenScene"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="BackgroundImage/SubViewport/OvenScene/Environment"]
environment = SubResource("Environment_hybjd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="BackgroundImage/SubViewport/OvenScene/Environment"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 0.1
shadow_enabled = true
sky_mode = 1

[node name="Floor" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.89014, 0, 0)
size = Vector3(17.7803, 1, 21)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="FrontWall" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.64722, 2.00667, 0)
size = Vector3(4.29443, 7.28735, 17)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="CSGBox3D4" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Environment/FrontWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.18169, -0.117126, 0)
operation = 2
size = Vector3(2.59578, 1.76575, 2.50977)
material = SubResource("StandardMaterial3D_kk8vj")

[node name="Oven" type="Node" parent="BackgroundImage/SubViewport/OvenScene"]

[node name="OvenTray" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Oven"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.736758, 1.51948, 0)
material_override = SubResource("StandardMaterial3D_0elqv")
size = Vector3(1.82135, 0.12915, 2.49609)
material = SubResource("StandardMaterial3D_fo3s5")

[node name="OvenTray2" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Oven/OvenTray"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00622559, 0.0718155, 0)
material_override = SubResource("StandardMaterial3D_0elqv")
operation = 2
size = Vector3(1.6272, 0.12915, 2.32422)
material = SubResource("StandardMaterial3D_fo3s5")

[node name="StaticBody3D" type="StaticBody3D" parent="BackgroundImage/SubViewport/OvenScene/Oven/OvenTray"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BackgroundImage/SubViewport/OvenScene/Oven/OvenTray/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_q8v73")
debug_color = Color(0, 0, 1, 1)

[node name="OvenDoor" type="Node3D" parent="BackgroundImage/SubViewport/OvenScene/Oven"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.34759, 1.00667, 0)

[node name="CSGBox3D4" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Oven/OvenDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.879929, -0.065705, 0)
size = Vector3(1.73927, 0.12915, 2.49609)
material = SubResource("StandardMaterial3D_fo3s5")

[node name="CSGBox3D5" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Oven/OvenDoor/CSGBox3D4"]
operation = 2
size = Vector3(1.46484, 0.366943, 2.28125)
material = SubResource("StandardMaterial3D_fo3s5")

[node name="CSGBox3D5" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene/Oven/OvenDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.879929, -0.065705, 0)
size = Vector3(1.73927, 0.0488281, 2.49609)
material = SubResource("StandardMaterial3D_uw635")

[node name="OvenLight" type="OmniLight3D" parent="BackgroundImage/SubViewport/OvenScene/Oven"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.463957, 1.96589, 0)
light_color = Color(0.898039, 0.447059, 0, 1)
light_energy = 16.0
light_size = 0.507
light_specular = 3.514
shadow_opacity = 0.93
omni_range = 3.846
omni_attenuation = 4.919

[node name="OvenHeatShader" type="MeshInstance3D" parent="BackgroundImage/SubViewport/OvenScene/Oven"]
transform = Transform3D(-0.0850469, 3.51422e-07, 0.996377, 0.996377, -3.60316e-06, 0.0850469, 3.61999e-06, 1, -4.37114e-08, 0.262543, 2.00305, 0)
material_override = SubResource("ShaderMaterial_awar5")
mesh = SubResource("QuadMesh_p1st1")
skeleton = NodePath("../OvenDoor")

[node name="SpotLight3D" type="SpotLight3D" parent="BackgroundImage/SubViewport/OvenScene/Oven"]
transform = Transform3D(0.984242, 5.26986e-09, -0.176827, 0.176827, -2.93327e-08, 0.984242, 0, -1, -2.98023e-08, -0.427455, 4.88798, 0)
light_color = Color(0.580392, 0.278431, 0, 1)
light_energy = 2.0
light_indirect_energy = 16.0
light_volumetric_fog_energy = 16.0
shadow_enabled = true
shadow_bias = 0.0
shadow_normal_bias = 1.076
shadow_transmittance_bias = 0.5
shadow_blur = 10.0
spot_range = 6.40217
spot_attenuation = -0.98
spot_angle = 28.3453
spot_angle_attenuation = 1.03526

[node name="GameCamera" type="Camera3D" parent="BackgroundImage/SubViewport/OvenScene"]
unique_name_in_owner = true
transform = Transform3D(-1.5733e-06, -0.0993714, 0.99505, 3.29472e-06, 0.99505, 0.0993714, -1, 3.43475e-06, -1.23811e-06, 2.81218, 2.05298, 0)
doppler_tracking = 2
current = true

[node name="AudioListener3D" type="AudioListener3D" parent="BackgroundImage/SubViewport/OvenScene/GameCamera"]
current = true

[node name="IngredientTable" type="CSGBox3D" parent="BackgroundImage/SubViewport/OvenScene"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.1, 0.1, 0)
size = Vector3(3, 1, 2)
material = SubResource("StandardMaterial3D_e1l8n")

[node name="DarkVignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_hd1p2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_acu4y")

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_dmj0s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -225.0
offset_right = 400.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8qn3m")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextLabel" type="RichTextLabel" parent="DialogueBox/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_5r7xd")
bbcode_enabled = true
scroll_active = false
horizontal_alignment = 1

[node name="ContinuePrompt" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -35.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Click to continue..."
label_settings = SubResource("LabelSettings_2quxm")
horizontal_alignment = 2

[node name="TypingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_qqj5d")
volume_db = -10.0
pitch_scale = 1.5
